# arbiter

./: .gitignore  .gitmodules  Cargo.toml  README.md  foundry.toml
arbiter-core/: Cargo.toml
arbiter-core/src/: agent.rs  collector.rs  environment.rs  executor.rs  lib.rs  manager.rs  middleware.rs  strategies.rs  tests.rs
arbiter-core/src/bindings/: arbiter_token.rs  counter.rs  liquid_exchange.rs  mod.rs
arbiter-core/src/math/: mod.rs  stochastic_process.rs
arbiter-core/src/tests/: interaction.rs  management.rs  mod.rs  strategies.rs  tests.rs
lib/bindings/src/: arbiter_math.rs  arbiter_token.rs  assembly_lib.rs  babylonian.rs  bit_math.rs  deflating_erc20.rs  erc20.rs  example_compute_liquidity_value.rs  example_flash_swap.rs  example_oracle_simple.rs  example_sliding_window_oracle.rs  example_swap_to_price.rs  fee_on_transfer_token.rs  fixed_point.rs  fixed_point_128.rs  fixed_point_96.rs  fixed_point_math_lib.rs  full_math.rs  gaussian.rs  invariant.rs  liquid_exchange.rs  liquidity_math.rs  low_gas_safe_math.rs  math.rs  migrations.rs  mock_erc20.rs  mock_time_uniswap_v3_pool.rs  oracle.rs  position.rs  rmm01_extended_lib.rs  rmm01_lib.rs  rmm01_portfolio.rs  router_event_emitter.rs  safe_cast.rs  safe_cast_lib.rs  safe_math.rs  safe_transfer_lib.rs  simple_registry.rs  sqrt_price_math.rs  swap_math.rs  (+20 more)
src/simulate/portfolio/: arbitrage.rs  startup.rs
