# Package configuration
[package]
name = "arbiter-core"
version = "0.3.0"
edition = "2021"

# Dependency configuration
[dependencies]
# For execution
futures = "0.3.28"
async-lock = "2.7.0"
async-std = "1.12.0"
async-trait = "0.1.68"
bytes = "1.4.0"
revm = "3.3.0"
statrs = "0.16.0"
crossbeam-channel = "0.5.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
atomic_enum = "0.2.0"

# For price simulation
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
RustQuant = "*"

# For Errors
anyhow = "1.0.71"
thiserror = "1.0.30"

# Workspace dependencies
ethers = { git = "https://github.com/primitivefinance/ethers-rs.git" }
ethers-core = "2.0.8"
artemis-core = { git = "https://github.com/paradigmxyz/artemis.git" }
# ethers-middleware = { version = "2.0.4" }
serde = { version = "1.0.163", features= ["derive"]}
serde_json = { version = "1.0.96" }
tokio = { version = "1.28.1", features = ["macros", "full"] }

[dev-dependencies]
hex = { version = "0.4.3", default-features = false }

